--- a/list3/list3-6.html
+++ b/list3/list3-6.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
+        <meta http-equiv="content-type" charset="UTF-8">
         <title>My first Vue app</title>
         <script src="https://unpkg.com/vue@next"></script>
 
@@ -11,26 +12,34 @@
     </head>
 
     <body>
-        <h1>Vue3</h1>
-        <div id="app">
-            <div v-html="message"></div>
+        <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
+        <div id="app" class="container">
+            <p>{{ message }}</p>
+            <hello/>        
         </div>
 
         <script>
-            const list = ['One', 'Two', 'Three']
             const appdata = {
                 data() {
                     return {
-                        message: `<ul>
-                            <li>${list[0]}</li>
-                            <li>${list[1]}</li>
-                            <li>${list[2]}</li>
-                            </ul>`
+                        message : 'コンポーネントを表示する',
+                        name: 'no-name'
                     }
                 }
             }
 
-            Vue.createApp(appdata).mount('#app');
+            let app = Vue.createApp(appdata)
+
+            app.component('hello', {
+                data() {
+                    return {
+                        counter: 0
+                    }
+                },
+                template: '<p v-on:click="counter++" class="alert alert-primary">clicked: {{counter}}</p>'
+            })
+
+            app.mount('#app');
         </script>
     </body>
 </html>
